[package]
name = "jobq"
version = "0.1.0"
authors = ["Isac Sund <isac.sund@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "0.2", features = ["full"] }
diesel = { version = "1.4.4", features = ["postgres", "r2d2"] }
serde = { version = "1.0.111", features = ["derive"] }
toml = "0.5"
config = "0.10.1"
