[package]
name = "jobq"
version = "0.1.0"
authors = ["Isac Sund <isac.sund@outlook.com>"]
edition = "2018"

[[bin]] # Bin to run the main server
name = "server"
path = "src/bin/main.rs"

[dependencies]
tokio = { version = "0.2", features = ["full"] }
diesel = { version = "1.4.4", features = ["postgres", "r2d2"] }
serde = { version = "1.0.111", features = ["derive"] }
serde_cbor = "0.10"
futures = "0.3.4"
tmq = "0.2.1"
toml = "0.5"
config = "0.10.1"
anyhow = "1.0"
